JSsidebar: spinfields n edge elms: Fix alignments
Many elements are too wide (as a group) which breaks the sidebar
layout:
- Spinfields and their labels (example cm) occupy too much width
- Many other elements are getting some with: max-content rules
from the generic jsdialog.css file which is affecting and also
breaking the sidebar
- Make sure these changes do not affect layout from impress sidebar
as in that case it's not needed

--- a/loleaflet/css/jsdialogs.css
+++ b/loleaflet/css/jsdialogs.css
@@ -90,7 +90,7 @@ td.jsdialog .jsdialog.cell,
 	padding: 4px;
 }
 
-.jsdialog.vertical {
+.jsdialog.vertical:not(.sidebar) {
 	width: max-content;
 }
 
